<resources>
    <string name="app_name">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="view_txt_profile">Profile</string>
    <string name="view_txt_project">Project</string>
    <string name="view_txt_student">Student</string>
    <string name="view_name">Lans</string>
    <string name="to_exit">To Do Exit</string>
    <string name="to_calculator">To Calculator</string>
    <string name="view_txt_friend">About Friends</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="cDescriptionLoginImage">-</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="slash">/</string>
    <string name="_4">4</string>
    <string name="x">x</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="minus">-</string>
    <string name="c">C</string>
    <string name="result">0</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="exit">Exit</string>
</resources>