<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/calcBG">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="end"
                android:maxLines="1"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/result"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="70sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btn7"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/btn8"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/btn9"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/btnMultiply"
                    style="@style/FunctionalButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/x" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btn4"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/btn5"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/btn6"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/btnDivision"
                    style="@style/FunctionalButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/slash" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btn1"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/btn2"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/btn3"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/btnMinus"
                    style="@style/FunctionalButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/minus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnClear"
                    style="@style/FunctionalButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/c" />

                <Button
                    android:id="@+id/btn0"
                    style="@style/NumericButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/btnEqual"
                    style="@style/FunctionalButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/equals" />

                <Button
                    android:id="@+id/btnPlus"
                    style="@style/FunctionalButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnExit_Calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/exit"
                    android:textSize="20sp"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorFuncButtonTxt"
                    android:background="@drawable/func_button" >
                </Button>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>