<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginForm">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/logImg"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:contentDescription="@string/cDescriptionLoginImage">
                </ImageView>

            </LinearLayout>

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:hint="@string/username"
                android:elevation="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:paddingStart="15dp"
                android:inputType="text"
                android:background="@drawable/textfield"
                android:importantForAutofill="no" tools:targetApi="lollipop">
            </EditText>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:hint="@string/password"
                android:elevation="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:inputType="textPassword"
                android:background="@drawable/textfield"
                android:importantForAutofill="no" tools:targetApi="lollipop">
            </EditText>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:background="@drawable/button"
                android:textColor="@android:color/white">
            </Button>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>