<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/gradientbackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="300px"
                        android:layout_height="300px"
                        android:layout_marginTop="50px"
                        android:layout_marginBottom="50px"
                        android:src="@drawable/web_hi_res_512"
                        app:civ_border_color="@color/colorName"
                        app:civ_border_width="1dp">
                    </de.hdodenhof.circleimageview.CircleImageView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btnCalculator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20px"
                        android:layout_marginTop="20px"
                        android:src="@drawable/ic_baseline_exit_to_app_24"
                        android:background="@drawable/baseline_calculate_white_18dp"
                        android:layout_alignParentEnd="false">
                    </ImageButton>

                    <ImageButton
                        android:id="@+id/btnExit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20px"
                        android:layout_marginTop="20px"
                        android:src="@drawable/ic_baseline_exit_to_app_24"
                        android:background="@drawable/gradientbackground"
                        android:layout_alignParentEnd="true">
                    </ImageButton>

                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/view_name"
                android:textColor="@color/colorName">
            </TextView>

            <TextView
                android:id="@+id/label_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="@color/colorSub"
                android:text="@string/view_txt_student"
                android:layout_marginBottom="50px"
                android:layout_marginTop="5px">
            </TextView>

        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_txt_profile">
                </com.google.android.material.tabs.TabItem>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_txt_project">
                </com.google.android.material.tabs.TabItem>

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    